# myADS

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish-to-pypi.yml
notebooks/: tutorial.ipynb
src/myads/: __init__.py  query.py
src/myads/cite_tracker/: __init__.py  check.py  citations.py  constants.py  database.py  models.py  publications.py  report.py  reports.py  search.py  tracked_authors.py  tracker.py  users.py
src/myads/cite_tracker/data/: user1_database.toml  user2_database.toml  users.toml
src/myads/scripts/: cite_tracker.py  myads.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_constants.py  test_database.py  test_search.py
