[build-system]
requires = ["setuptools >= 60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myads"
description = "Simple ADS API query package and citation tracker"
readme = "README.md"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'requests',
    'toml',
    'tabulate>=0.9.0'
]
requires-python = ">=3.7"
version = "0.0.2"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[project.scripts]
myads = "myads.scripts.myads:main"
