[build-system]
requires = ["setuptools >= 60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myads"
description = "Simple ADS API query package and citation tracker"
readme = "README.md"
authors = [{ name = "Stuart McAlpine", email = "stuart.mcalpine@fysik.su.se" }]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'requests',
    'toml',
    'tabulate>=0.9.0'
]
requires-python = ">=3.7"
version = "1.0.1"
keywords = ["nasa-ads", "citations", "astronomy", "ads", "python"]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[project.scripts]
myads = "myads.scripts.myads:main"
