[build-system]
requires = ["setuptools >= 60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myads"
description = "Simple ADS API query package and citation tracker"
readme = "README.md"
authors = [{ name = "Stuart McAlpine", email = "stuart.mcalpine@fysik.su.se" }]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'requests',
    'toml',
    'tabulate>=0.9.0',
    'pandas',
    'sqlalchemy',
    'rich',
]
requires-python = ">=3.7"
keywords = ["nasa-ads", "citations", "astronomy", "ads", "python", "arxiv"]
dynamic = ["version"] # Scrape the version dynamically from the package

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[project.scripts]
myads = "myads.scripts.cite_tracker:main"

[project.urls]
homepage = "https://github.com/stuartmcalpine/myADS"
repository = "https://github.com/stuartmcalpine/myADS"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
viz = [
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "wordcloud>=1.8",
]

[tool.setuptools.dynamic]
version = {attr = "myads._version.__version__"}
